# swarmdeck

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HANDOFF-PROTOCOL-RFC.md
examples/: basic_trace.py  openclaw_team.py  session_example.py
src/swarmdeck/: __init__.py  _async.py  context.py  models.py  observatory.py  session.py  store.py  tracer.py
src/swarmdeck/exporters/: __init__.py  console.py  otel.py
src/swarmdeck/frameworks/: __init__.py  autogen.py  crewai.py  langgraph.py
src/swarmdeck/handoff/: __init__.py  manager.py  models.py  transport.py
tests/: conftest.py  test_context.py  test_exporters.py  test_frameworks.py  test_handoff.py  test_models.py  test_session.py  test_store.py  test_tracer.py  test_tracing.py
