[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmdeck"
dynamic = ["version"]
description = "The missing operations layer for AI agent teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
keywords = ["agents", "observability", "tracing", "multi-agent", "llm"]

[project.optional-dependencies]
otel = ["opentelemetry-sdk>=1.20.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/openclaw/swarmdeck"
Repository = "https://github.com/openclaw/swarmdeck"
Issues = "https://github.com/openclaw/swarmdeck/issues"

[tool.hatch.version]
path = "src/swarmdeck/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/swarmdeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
